test/positive/initially02.cfr
// Test for initially constraint

a
 b ?
  initial c ?
  d ?
  e ?

/*
 Rao 2014-08-08: Ofcourse it parses perfectly with initial c ?
 But if I cahnge (initial c)  to  (initiaaal c), then also it parses correctly
 which need to be checked with Paulius.
 Here is the output.
[Linearized tree]

a {
  b ? {
    initiaaal c ? d ? e ? 
  }
  }
*/


