test/negative/initially02.cfr
// Test for negative initially constraint

a
 b ?
  c ?
  d ?
  e ?
  initial  

//Rao: 2014-08-08: working as expected, it fails.
